--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -22,7 +22,7 @@
                     {
                         if (jobgroup.Active != 0) {
                         <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
-                            <div class="col-sm-4 mrgn-bttm-md">
+                            <div class="col-md-4 col-sm-6">
                                 <figure>
                                     <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
@@ -38,9 +38,9 @@
                 }
             </form>
         </div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear:both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
