--- a/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
@@ -6,7 +6,7 @@
         <div class="col-md-12">
             <h2>@Localizer["Q1"]</h2>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4 col-sm-6">
                     <figure>
                         <a class="nav-link" asp-page="Deck/PositionList">
                             <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
@@ -14,7 +14,7 @@
                         <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
                     </figure>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4 col-sm-6">
                     <figure>
                         <a asp-page="Engineering/PositionList">
                             <img src="~/img/CCGMember/Oiler.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
@@ -22,7 +22,7 @@
                         <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
                     </figure>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4 col-sm-6">
                     <figure>
                         <a asp-page="Logistics/PositionList">
                             <img src="~/img/CCGMember/GS.jpg" alt="@Localizer["PhotoLogistics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
@@ -32,9 +32,9 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear:both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
