--- a/Web/Pages/Candidate/Shoreside/AllCandidateShoreside.cshtml
+++ b/Web/Pages/Candidate/Shoreside/AllCandidateShoreside.cshtml
@@ -21,7 +21,7 @@
                     {
                         @if (jobgroup.Active != 0) {
                         <a asp-page="SimilarList" asp-route-id="@jobgroup.Id">
-                            <div class="col-sm-4 mrgn-bttm-md">
+                            <div class="col-md-4 col-sm-6">
                                 <figure>
                                     <img src="@Url.Content(imagefolder + jobgroup.Code + ".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@(isEnglish ? jobgroup.NameEng : jobgroup.NameFre) (@jobgroup.Code)</h6></figcaption>
@@ -37,9 +37,9 @@
                 }
             </form>
         </div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear: both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="../Index">@Localizer["Previous"]</a></li>
