--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -13,19 +13,19 @@
 <div class="container">
     <div class="row">
         <a asp-page="CCGMember/AllPositions">
-            <div class="col-md-4">
-                <img src="~/img/CCG-employee.png" alt="@Localizer["PhotoMember"]" class="img-responsive" />
+            <div class="col-md-4 col-sm-6">
+                <img src="~/img/CCG-employee.png" alt="@Localizer["PhotoMember"]" class="img-responsive center" />
                 <h3 style="text-align:center">@Localizer["CCGMember"]</h3>
             </div>
         </a>
         <a asp-page="Candidate/Index">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
                 <img src="~/img/external candidates.png" alt="@Localizer["PhotoExternal"]" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["ExternalCandidate"]</h3>
             </div>
         </a>
         <a asp-page="Student/Index">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
                 <img src="~/img/Students.png" alt="@Localizer["PhotoStudents"]" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["Student"]</h3>
             </div>
