--- a/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
@@ -6,7 +6,7 @@
 
             <h2>@Localizer["Q1"]</h2>
 
-            <div class="col-sm-10 col-sm-offset-1 well text-center ">
+            <div class="col-sm-12 well text-center ">
                 <p>@Localizer["Text"]</p>
                 <p>@Localizer["Details"]<a rel="external" target="_blank" href="@Localizer["Link"]">@Localizer["Link"]</a></p>
             </div>
