More fix on layout

--- a/Web/Pages/Student/College/Administrative.cshtml
+++ b/Web/Pages/Student/College/Administrative.cshtml
@@ -33,7 +33,7 @@
                  };
 
                     <tr>
-                        <td>@position.JobGroupCode-@position.SubGroupCode @position.JobLevelValue</td>
+                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
                         <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
