--- a/Web/Pages/Student/HighSchool/AllPositions.cshtml
+++ b/Web/Pages/Student/HighSchool/AllPositions.cshtml
@@ -53,10 +53,9 @@
             </figure>
         </div>
 
-        <div class="clearfix"></div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear:both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
