--- a/Web/Pages/Student/University/AllPositions.cshtml
+++ b/Web/Pages/Student/University/AllPositions.cshtml
@@ -79,10 +79,9 @@
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0">@Localizer["social"]<br /><small>@Localizer["economics"]</small></h4></figcaption>
             </figure>
         </div>
-        <div class="clearfix"></div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear:both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
