--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -237,19 +237,19 @@
                     }
                 }
 
-                <div class="col-md-6">
-                    <button class="btn btn-primary pull-left" asp-page-handler="edit" asp-all-route-data="@paramdataprevious">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Add Competency"]&nbsp;&nbsp;&nbsp;&nbsp;</button>
-                </div>
-                <div class="col-md-6">
+                
+                    <button class="btn btn-primary pull-left" asp-page-handler="edit" asp-all-route-data="@paramdataprevious">@Localizer["Add Competency"]</button>
+               
+                
                     <button class="btn btn-primary pull-right">@Localizer["Search Positions"]</button>
-                </div>
+               
 
             </div>
         </form>
         <br />
-        <div class="row">
-            <div class="col-lg-12 mrgn-tp-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear:both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPageSimilar" asp-all-route-data="@paramdataprevious">@Localizer["Previous"]</a></li>
